Open source admin stock locations management

--- a/admin/Gemfile
+++ b/admin/Gemfile
@@ -2,4 +2,8 @@ eval_gemfile('../common_spree_dependencies.rb')
 
 gem 'spree_core', path: '../core'
 
+group :test, :development do
+  gem 'selenium-webdriver'
+end
+
 gemspec
