--- a/admin/Gemfile
+++ b/admin/Gemfile
@@ -1,6 +1,7 @@
 eval_gemfile('../common_spree_dependencies.rb')
 
 gem 'spree_core', path: '../core'
+gem 'spree_api', path: '../api'
 
 group :test, :development do
   gem 'selenium-webdriver'
