--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ defaults: &defaults
     BUNDLE_PATH: ~/spree/vendor/bundle
     RAILS_VERSION: << parameters.rails_version >>
     DB: postgres # default value, this will speed up bundle install for all postgres builds
+    DB_HOST: localhost
+    DB_USERNAME: postgres
+    
   working_directory: ~/spree
   docker:
     - image: &ruby_image cimg/ruby:3.3.0-browsers
@@ -70,37 +73,74 @@ jobs:
             - store_test_results:
                 path: /tmp/test-results
 
-  tests_postgres:
+  tests_core:
     <<: *run_test
-    parallelism: 12
-    parameters:
-      <<: *default_parameters
-    environment:
-      <<: *environment
-      DB_HOST: localhost
-      DB_USERNAME: postgres
     docker:
       - image: *ruby_image
       - image: cimg/postgres:16.2
         environment:
           POSTGRES_USER: postgres
-
-  tests_mysql:
-    <<: *run_test
-    parallelism: 12
-    parameters:
-      <<: *default_parameters
+    parallelism: 6
     environment:
       <<: *environment
-      DB: mysql
-      DB_HOST: 127.0.0.1
-      DB_USERNAME: root
-      COVERAGE: true
-      COVERAGE_DIR: /tmp/workspace/simplecov
+      PROJECTS: core
+
+  tests_api:
+    <<: *run_test
+    parallelism: 4
     docker:
       - image: *ruby_image
-      - image: cimg/mysql:8.0
-        command: [--default-authentication-plugin=mysql_native_password]
+      - image: cimg/postgres:16.2
+        environment:
+          POSTGRES_USER: postgres
+    environment:
+      <<: *environment
+      PROJECTS: api
+
+  tests_admin:
+    <<: *run_test
+    docker:
+      - image: *ruby_image
+      - image: cimg/postgres:16.2
+        environment:
+          POSTGRES_USER: postgres
+    environment:
+      <<: *environment
+      PROJECTS: admin
+
+  tests_storefront:
+    <<: *run_test
+    docker:
+      - image: *ruby_image
+      - image: cimg/postgres:16.2
+        environment:
+          POSTGRES_USER: postgres
+    environment:
+      <<: *environment
+      PROJECTS: storefront
+
+  tests_other:
+    <<: *run_test
+    docker:
+      - image: *ruby_image
+      - image: cimg/postgres:16.2
+        environment:
+          POSTGRES_USER: postgres
+    environment:
+      <<: *environment
+      PROJECTS: emails,sample
+
+  # tests_mysql:
+  #   <<: *run_test
+  #   parallelism: 12
+  #   parameters:
+  #     <<: *default_parameters
+  #   environment:
+  #     <<: *environment_mysql
+  #   docker:
+  #     - image: *ruby_image
+  #     - image: cimg/mysql:8.0
+  #       command: [--default-authentication-plugin=mysql_native_password]
 
 workflows:
   main:
@@ -108,43 +148,36 @@ workflows:
       - run_test:
           name: build
           run_file_path: ./bin/bundle_ruby.sh
-      - tests_postgres:
-          name: tests_rails_postgres
+      - tests_core:
+          name: tests_rails_postgres_core
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           requires:
             - build
-      - tests_postgres:
-          name: tests_rails_7_1_postgres
-          rails_version: '~> 7.1.0'
+      - tests_api:
+          name: tests_rails_postgres_api
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           requires:
             - build
-            - tests_rails_postgres
-      - tests_postgres:
-          name: tests_rails_7_0_postgres
-          rails_version: '~> 7.0.0'
+      - tests_admin:
+          name: tests_rails_postgres_admin
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           requires:
             - build
-            - tests_rails_postgres
-      - tests_postgres:
-          name: tests_rails_6_1_postgres
-          rails_version: '~> 6.1.0'
+      - tests_storefront:
+          name: tests_rails_postgres_storefront
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           requires:
             - build
-            - tests_rails_postgres
-      - tests_mysql:
-          name: tests_rails_mysql
+      - tests_other:
+          name: tests_rails_postgres_other
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           requires:
             - build
-            - tests_rails_postgres
       - run_test:
           name: brakeman
           restore_cache_key_1: spree-brakeman-{{ .Branch }}
@@ -153,4 +186,8 @@ workflows:
           run_file_path: ./bin/brakeman.sh
           requires:
             - build
-            - tests_rails_postgres
+            - tests_rails_postgres_core
+            - tests_rails_postgres_api
+            - tests_rails_postgres_admin
+            - tests_rails_postgres_storefront
+            - tests_rails_postgres_other
