Fixed sandbox/dummy generation

--- a/cli/lib/spree_cli/templates/extension/Gemfile
+++ b/cli/lib/spree_cli/templates/extension/Gemfile
@@ -10,9 +10,8 @@ gem 'rails-controller-testing'
 spree_opts = { github: 'spree/spree', branch: 'main' }
 gem 'spree', spree_opts
 gem 'spree_emails', spree_opts
-
-gem 'spree_backend', github: 'spree/spree_backend', branch: 'main'
-gem 'spree_frontend', github: 'spree/spree_rails_frontend', branch: 'main'
+gem 'spree_admin', spree_opts
+gem 'spree_storefront', spree_opts
 
 if ENV['DB'] == 'mysql'
   gem 'mysql2'
